main.css
/* ... */
.dishes .box-container {
  display: grid;
  place-self: center;
  margin: auto;
  justify-content: center !important;
  padding-top: 2rem;
  grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
  gap: 4.5rem;

}

.dishes .box-container .box {
  height: 45rem;
  padding: 2.5 rem;
  background: white;
  border-radius: 2rem;
  border: 0.1rem solid rgba(0, 0, 0, 0.2);
  box-shadow: black;
  position: relative;
  overflow: hidden;
  text-align: center;
}

.dishes .box-container .food-card {
  height: 45rem;
  background-size: 55rem;
  border-radius: 2rem;
  border: 0.1rem solid rgba(0, 0, 0, 0.2);
  box-shadow: black;
  position: relative;
  overflow: hidden;
  text-align: center;
}

.background-for-menu {
  background-size: 60rem !important;
}

.center {
  margin: auto;
  width: 90%;
  padding: 10px;
}

.dishes .box-container .food-card .food-content {
  position: relative;
  height: 30rem;
  padding: 1rem;
  background-color: rgba(255, 255, 255, 0.9);
  border-radius: 2rem;
  cursor: pointer;
  transform: translateY(33rem);
  transition: transform 0.3s;
}

.dishes .box-container .food-card .food-content::before {
  content: '';
  position: absolute;
  top: -2rem;
  right: -2rem;
  display: block;
  border-radius: 50%;
  box-shadow: inset -5rem -5rem #ffff;
}

@media (pointer: fine) {
  .non-touch {
    display: block;
  }

  .touch {
    display: none;
  }
}


@media (pointer: coarse) {
  .touch {
    display: block;
  }

  .non-touch {
    display: none;
  }
}

/* @media (min-width: 1150px) {
  .touch {
    display: none;
  }

  .non-touch {
    display: block;
  }
} */

/* For the Lenovo Ideapad Flex 5 (14-inch laptop) */
@media (min-width: 1366px) {
  .touch {
    display: none;
  }

  .non-touch {
    display: block;
  }
}

/* For the Amazon Fire HD 10 Tablet */
@media (max-width: 1300px) {
  .touch {
    display: block;
  }

  .non-touch {
    display: none;
  }
}


.notification {
  position: relative;
  top: 75px;
  left: 0;
  width: 100%;
  height: 50px;
  background-color: #ff0000;
  color: #ffffff;
  padding: 10px;
  text-align: center;
  z-index: 1000;
  /* Ensure it's above other content */
  font-size: 18px;

  /* transform: translateY(25px); */
}

.notification .close {
  position: absolute;
  top: 50%;
  right: 20px;
  transform: translateY(-50%);
  cursor: pointer;
  font-size: 20px;
}

.notification a {
  color: rgb(255, 255, 255);
  /* Yellow color for links */
  text-decoration: underline;
  font-weight: bold;
}

@media (max-width: 768px) {
  .notification {
    /* added posiiton is relative */
    position: relative;
    height: auto;
    padding: 20px;

    /* moving the noti up */
    transform: translateY(-70px);
    font-size: 16px;
  }

  .notification .close {
    font-size: 18px;
  }
}

@media (max-width: 480px) {
  .notification {

    height: auto;
    padding: 15px;
    font-size: 13px;
  }

  .notification .close {
    font-size: 20px;
  }
}

.dishes .box-container .food-card:hover .food-content {
  transform: translateY(50%);
}


.dishes .box-container .food-card .food-content:hover {
  transform: translateY(50%);
}


.stars {
  padding: 1rem 0;
}

.stars i {
  font-size: 1.7rem;
  color: red;
}

.stars {
  padding: 1rem 0;
}

.stars i {
  font-size: 1.7rem;
  color: red;
}

#fish-tacos {
  background-image: url("images/menu images/American Cuisine/fish tacos, $7.99.jpg");
}

.food-title h3 {
  color: red;
}

.food-sub {
  padding-top: -2rem;
  padding-bottom: 2rem;
  font-size: 12px;
}



@media (max-width: 900px) {
  .tiny-food-sub {
    font-size: 1.9rem !important;
    margin-bottom: 1.7rem !important;
  }

  .dishes h3 {
    font-size: 2.7rem !important;
  }

  .btn span {
    padding: 17px 10px !important;
    font-size: 2rem !important;
  }

  .dishes .stars i {
    font-size: 1.7rem !important;
  }

  .about-text p {
    font-size: 1.8rem !important;
    line-height: 25px !important;
  }

  .about-text a {
    font-size: 1.9rem !important;
  }

  .services .box p {
    font-size: 1.8rem;
  }

  .gallery .box p {
    font-size: 1.8rem !important;
  }

  .review .slide p {
    font-size: 1.8rem !important;
  }

  .footer h3 {
    font-size: 2.6rem !important;
  }

  .footer h4 {
    font-size: 2rem !important;
  }

  .footer a {
    font-size: 1.8rem !important;
  }

  .section_faq span {
    font-size: 1.9rem !important;
  }

  .about-content2 p {
    font-size: 1.8rem !important;
  }

  .about-content3 p {
    font-size: 1.8rem !important;
  }

  .about-content4 p {
    font-size: 1.8rem !important;
  }

  .timeline p {
    font-size: 1.8rem !important;
  }

}


.dishes .box-container .box img {
  height: 16rem;
  margin: 1rem 0;
  margin-top: 27px;
  border-radius: 10px;
  overflow: hidden;
  align-self: center;
}

.dishes .box-container .box p {
  font-size: 2rem;
  text-align: center;
  padding-bottom: 2.5rem;
  margin-left: 20px;
  margin-right: 20px;
}

.dishes .box-container .box h3 {
  color: black;
  font-size: 2.5rem;
}


.dishes .box-container .box a .span {
  color: red;
  font-weight: bolder;
  margin-right: 1rem;
  font-size: 2.5rem;
}

.dishes .box-container .box a:hover {
  letter-spacing: 0.25rem;
}

.home .home-slider {
  height: 100%;
  overflow: hidden;
}

.home .home-slider .slide {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  gap: 2rem;
  padding-top: 9rem;
  height: 100%;
}

.home .home-slider .slide .content {
  flex: 1 1 45rem;
}

.home .home-slider .slide .image {
  flex: 1 1 45rem;
  height: 100%;
}


.home .home-slider .slide .image img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  object-position: center center;
  max-height: 100%;
  max-width: 100%;
}

.benefits-page {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
  font-family: sans-serif;
  width: 100%;
  min-height: 100vh;
}

.benefits-container {
  width: 80%;
  display: block;
  margin: auto;
  padding: 20px;
}
/* ... */

